WMDP-208: Tidy up the mock API (#18)
WMDP-208: Tidy up the mock API
